# CM6

./: .gitignore  MANIFEST.in  Readme.md  branch-ci.py  examples.py  output_results.py  packaging_package.md  pr_check.py  pypi-publish.py  pyproject.toml  setup.py  validate_CM6.py
.github/workflows/: deploy-wheels.yml  dev.yml  pr-check.yml
CM6/: __init__.py  forward_Sq_d_Re.py  getSQfield_CM6.py  get_f107_index_CM6.py
DIFI/: getSQfield.py  get_f107_index_all.py
tests/: difi_tests.py  test_getSQfield.py  test_values_CM6_v1_20250731.txt  validate_CM6.py  validate_above_sq_current.py  validate_difi8.py  validate_list_input.py  validate_sqlfield_geoc.py  validate_time_range_list.py  validate_time_range_list_no_warning.py  validate_time_range_point.py
