[project]
name = "py_CM6"
version = "1.0.0"
authors = [
    { name="Collin Kadlecek", email="Collin.Kadlecek@colorado.edu" },
]
description = "The python module for CM6"
readme = "README.md"
#requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
    "geomaglib>=1.2.1",
    "pydifi @ https://github.com/CIRES-Geomagnetism/DIFI/releases/download/v8.0.1/pydifi-8.0.0-py3-none-any.whl",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/CM6"

[tool.setuptools]
packages = ["CM6"]
